fix(header): align styling more closely with original birdies site note: the "tickets" button can be removed in sharepoint.

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -161,10 +161,33 @@ header nav[aria-expanded='true'] .nav-tools li {
 /* desktop nav styles */
 @media (min-width: 1000px) {
   header nav {
-    display: flex;
-    justify-content: space-between;
+    grid-template: 
+      "nav-tools"
+      "nav-items"; 
+    display: grid;
+    grid-template-columns: 1fr; 
+    grid-template-rows: 1fr 1fr; 
+    gap: 0 0; 
     height: var(--nav-height);
     padding: 16px 2rem;
+    z-index: 4;
+  }
+
+  header nav::after {
+    content: "★ Honor being honorable ★";
+    display: block;
+    background: var(--link-hover-color);
+    color: white;
+    font-size: var(--body-font-size-xs);
+    text-transform: uppercase;
+    text-align: center;
+    padding: 0.5rem 0;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    top: calc(var(--nav-height) - 4px);
+    font-weight: bold;
+    z-index: 4;
   }
 
   header nav .nav-sections > ul > li.nav-drop {
@@ -188,10 +211,30 @@ header nav[aria-expanded='true'] .nav-tools li {
   header nav .button:any-link {
     font-size: 12px;
     margin: 4px;
+    text-transform: uppercase;
   }
 
   header nav .nav-tools {
-    display: flex;
+    display: block;
+    grid-area: nav-tools;
+  }
+
+  header nav .nav-tools p {
+    display: block;
+    float: left;
+  }
+
+  header nav .nav-sections > ul > li > p {
+    margin: 0;
+  }
+
+  header nav .nav-tools p:last-of-type {
+    grid-area: n-tools-right;
+    float: right;
+  }
+
+  header nav .nav-tools p:last-of-type a.button {
+    background-color: var(--link-hover-color);
   }
 
   header nav .nav-hamburger {
@@ -199,16 +242,21 @@ header nav[aria-expanded='true'] .nav-tools li {
   }
 
   header nav .nav-sections {
-    display: unset;
+    display: block;
+    grid-area: nav-items;
+    border-top: 1px solid grey;
   }
 
   header nav .nav-brand {
-    flex: 0 0 150px;
+    position:absolute;
+    left: calc(50vw - (200px / 2));
+    background: white;
+    width: 200px;
+    text-align: center;
   }
 
   header nav .nav-sections ul {
-    display: flex;
-    flex-direction: row;
+    display: unset;
     background-color: unset;
     width: unset;
     margin: 0;
@@ -223,14 +271,34 @@ header nav[aria-expanded='true'] .nav-tools li {
   header nav .nav-sections > ul > li {
     padding: 0 16px;
     position: relative;
-    font-size: 16px;
+    font-size: var(--body-font-size-xs);
     margin: 0;
     cursor: pointer;
-    padding-top: 0;
+    padding-top: 5px;
+    display: block;
+    float: left;
+    border-bottom: 5px solid white;
   }
 
-  header nav .nav-sections > ul > li > p {
-    margin: 0;
+  header nav .nav-sections > ul > li > ul > li {
+    font-size: 18px;
+    padding: 8px 16px;
+  }
+
+  header nav .nav-sections > ul > li:hover {
+    border-bottom: 5px solid var(--highlight-background-color);
+  }
+
+  header nav .nav-sections > ul a {
+    font: var(--heading-font-family);
+  }
+
+  header nav .nav-sections > ul a:hover {
+    text-decoration: none;
+  }
+
+  header nav .nav-sections > ul > li:nth-last-of-type(1), header nav .nav-sections > ul > li:nth-last-of-type(2) {
+    float: right;
   }
 
   header nav .nav-sections > ul > li > ul {
@@ -250,24 +318,19 @@ header nav[aria-expanded='true'] .nav-tools li {
     position: absolute;
     border-left: 15px solid transparent;
     border-right: 15px solid transparent;    
-    border-bottom: 15px solid var(--highlight-background-color);
+    border-bottom: 15px solid var(--background-color);
     top: -15px;
     left: 20px;
-  }
-
-
-  header nav .nav-sections > ul > li > ul > li {
-    font-size: 18px;
-    padding: 8px 16px;
   }
 
   header nav .nav-sections > ul > li[aria-expanded='true'] ul {
     display: block;
     position: absolute;
-    background-color: var(--highlight-background-color);
+    background-color: var(--background-color);
     width: 300px;
     left: 0;
     padding: 16px;
     box-shadow: 0 0 5px var(text-color);
+    z-index: 5;
   }
 }
